fix dropdown menu z-index

--- a/frontend/src/metadata/components/popover/column-popover/dropdown-menu/index.css
+++ b/frontend/src/metadata/components/popover/column-popover/dropdown-menu/index.css
@@ -28,3 +28,7 @@
   margin-right: 8px;
   flex-shrink: 0;
 }
+
+.sf-metadata-column-type-dropdown-menu .dropdown-menu {
+  z-index: 1061;
+}
